--- a/spec/dummy_app/Gemfile
+++ b/spec/dummy_app/Gemfile
@@ -1,6 +1,6 @@
 source 'http://rubygems.org'
 
-gem 'rails', '4.2'
+gem 'rails', '~> 5.1.3'
 gem 'sqlite3'
 
 gem 'json'
@@ -9,7 +9,6 @@ gem 'haml-rails'
 gem 'jquery-rails'
 gem 'jquery-ui-rails'
 
-gem 'quiet_assets'
 gem 'sass-rails'
 
 gem 'awesome_nested_set', github: "collectiveidea/awesome_nested_set"
